# ardupilot-simulation

./: README.md
setup/: setup_ardupilot_env.sh  setup_ardupilot_gz.sh
simulations/: CMakeLists.txt  package.xml
simulations/config/: iris_gz_brdige.yaml
simulations/launch/: iris_runway.launch.py
